@@ -81,7 +81,7 @@ CONFIG_DRAM_SIZE=(32*1024)
 CONFIG_DRAM_START=0x10000000
 CONFIG_DRAM_END=(CONFIG_DRAM_START+CONFIG_DRAM_SIZE)
 CONFIG_ARCH_IRQPRIO=y
-CONFIG_ARCH_INTERRUPTSTACK=1024
+CONFIG_ARCH_INTERRUPTSTACK=n
 CONFIG_ARCH_STACKDUMP=y
 CONFIG_ARCH_BOOTLOADER=n
 CONFIG_ARCH_LEDS=y
@@ -113,7 +113,7 @@ CONFIG_LPC17_UART3=n
 CONFIG_LPC17_CAN1=n
 CONFIG_LPC17_CAN2=n
 CONFIG_LPC17_SPI=n
-CONFIG_LPC17_SSP0=n
+CONFIG_LPC17_SSP0=y
 CONFIG_LPC17_SSP1=n
 CONFIG_LPC17_I2C0=n
 CONFIG_LPC17_I2C1=n
