@@ -1176,3 +1176,8 @@
 	* net/uip/uip_igmp*.c - Add IGMP support (untested on initial
 	  checkin).
 	* examples/igmp - Add a trivial test for IGMP (much more is needed)
+    * configs/nucleus2g/usbserial and usbstorage - Add USB configurations
+      for testing purposes.
+    * arch/arm/src/common/up_internal.h, cortexm3/up_assert.c,
+      */*_vectors.S - Correct compilations errors when CONFIG_ARCH_INTERRUPTSTACK
+      is enabled (feature still not tested)
